[build-system]
requires = [
    "flit_core >=2,<4",
]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "asce7"
author = "Ricky L Teachey Jr"
author-email = "ricky@teachey.org"
home-page = "https://teachey.org"
requires = [
    "numpy >=1.20",
    "pandas >=1.2",
    "scipy >=1.6",
]
requires-python=">=3.9"
description-file="README.md"
classifiers=[
    "Intended Audience :: Other Audience",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Development Status :: 2 - Pre-Alpha",
]

[tool.flit.metadata.requires-extra]
test = [
    "pytest >=6.2",
]
