[build-system]
build-backend = "flit_core.buildapi"
requires = [
  "flit_core<4,>=3.4",
]

[project]
name = "asce7"
readme = "README.md"
authors = [{name = "Ricky L Teachey Jr", email = "ricky@teachey.org"}]
requires-python=">=3.9"
dependencies = [
  "ceng",
  "numpy>=1.20",
  "scipy>=1.7",
]
dynamic = [
  "description",
  "version",
]
classifiers = [
    "Intended Audience :: Other Audience",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Development Status :: 2 - Pre-Alpha",
]
[project.optional-dependencies]
test = [
  "pytest>=6.2",
]

[project.urls]
Home = "https://github.com/ricyteach/asce7"
